--- a/bootstrap_freelancer/style.css
+++ b/bootstrap_freelancer/style.css
@@ -17,3 +17,26 @@
   .bg_navy{
     background-color: #3A546D;
   }
+
+  .bar {
+    width: 9%;
+    height: 2px;
+    border-radius: 100px;
+  }
+
+  .bg_black{
+    background-color: black;
+  }
+
+  .bg_white{
+    background-color: white;
+  }
+
+  .social_icon{
+    padding: 5px 10px;
+    height: 35px;
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
